manifests/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-ui
  labels:
    name: store-ui
spec:
  ports:
    - port: 8080
      name: nginx
  selector:
    app: store-ui
