manifests/ui/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: store-ui
  labels:
    name: store-ui
spec:
  path: /
  to:
    kind: Service
    name: store-ui
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
